@@ -55,6 +55,33 @@ puts("class #{wx_name}")
 				line = "//" + line
 			end
 			
+			# Fix 1.3.29's ruby tracking
+			if(ENV['SWIGVER'] == 'SWIG Version 1.3.29')
+
+			  if(line.index("static VALUE swig_ruby_trackings"))
+					line = "extern VALUE swig_ruby_trackings;"
+			  end
+				if(line.index("static ID swig_ruby_hash_delete"))
+					line = "extern ID swig_ruby_hash_delete;"
+			  end
+
+				if(line.index("swig_ruby_trackings = rb_hash_new();"))
+					line = "  if(swig_ruby_trackings == 0) {\n" +
+									line;
+			  end
+			
+				if(line.index("swig_ruby_hash_delete = rb_intern(\"delete\");"))
+				line = line + "\n" + 
+				  "rb_global_variable(&swig_ruby_trackings);\n" +
+							 "  }";
+			  end
+
+				if(line.index("char* type_name = RSTRING(value)->ptr;"))
+					line = "        const char* type_name = (value == Qnil) ? \"\" : RSTRING(value)->ptr;\n";
+				end
+				
+			end
+
 			# instead of defining a new module,
 			if(line.index("rb_define_module(\"Wx"))
 				# set this module equal to the real main module
